[batch] better status information for jobs
1. Add `dictfix`, a little tool for wrangling json-like data into a sensible,
   standardized format.

2. Modify job.html to include a simple table of important parts of the job
   specification such as the command and the requests of cpu, memory, and
   storage.

3. Modify job.html to include a simple table summarizing the status and runtime
   of each step of the job.

--- a/web_common/web_common/styles/main.scss
+++ b/web_common/web_common/styles/main.scss
@@ -241,10 +241,18 @@ a {
         &:nth-of-type(even) {
             background-color: #f2f2f2;
         }
+        td.data-table-bad {
+          color: red;
+          border-color: red;
+          background-color: #ffeaea;
+        }
     }
 
     tbody tr:hover {
         background-color: #ddd;
+        td.data-table-bad {
+          background-color: #ebd8d8;
+        }
     }
 }
 
@@ -410,4 +418,10 @@ a {
         transform: scale(1);
         opacity: 0;
     }
+}
+
+pre {
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
 }
