--- a/benchmark-service/benchmark/templates/index.html
+++ b/benchmark-service/benchmark/templates/index.html
@@ -32,7 +32,7 @@
     <tbody>
     {% for commit in commits.values() %}
     <tr>
-        <td><a href="{{ base_path }}/lookup?file={{ benchmark_results_path }}/{{ commit['sha'] }}.json">{{ commit['title'] }}</a></td>
+        <td><a href="{{ base_path }}/lookup?file={{ benchmark_results_path }}/0-{{ commit['sha'] }}.json">{{ commit['title'] }}</a></td>
         <td>{{ commit['sha'] }}</td>
         <td>{{ commit['author'] }}</td>
         <td>{{ commit['date'] }}</td>
