[batch] a few fixups of front end jobs page
- I am now enforcing that container statuses are None if there is no information
- The duration can be missing even if the timing struct is not (for example, in progress jobs).

--- a/batch/batch/front_end/templates/job.html
+++ b/batch/batch/front_end/templates/job.html
@@ -66,12 +66,12 @@
     <tr>
       <td>{{ step['name'] }}</td>
       <td>
-        {% if step['timing']['pulling'] %}
+        {% if step['timing']['pulling'] and step['timing']['pulling']['duration'] %}
         {{ step['timing']['pulling']['duration'] / 1000.0 }}
         {% endif %}
       </td>
       <td>
-        {% if step['timing']['running'] %}
+        {% if step['timing']['running'] and step['timing']['running']['duration'] %}
         {{ step['timing']['running']['duration'] / 1000.0 }}
         {% endif %}
       </td>
