--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -34,7 +34,7 @@
         <a class="header-dropdown-menu-link" href="{{ batch_base_url }}/billing">Billing</a>
         <a class="header-dropdown-menu-link" href="{{ batch_driver_base_url }}/user_resources">User Resources</a>
         {% endif %}
-        <a class="header-dropdown-menu-link" href="https://hail.is/docs/batch/">Docs</a>
+        <a class="header-dropdown-menu-link" href="{{ www_base_url }}/docs/batch/">Docs</a>
       </div>
     </div>
   </div>
